Closed Bug 186957 Opened 23 years ago Closed 23 years ago

Extra white zone around HR

Categories

(Core :: Layout: Positioned, defect, P3)

PowerPC
macOS
defect

Tracking

()

RESOLVED FIXED

People

(Reporter: vargenau, Assigned: roc)

References

()

Details

(Keywords: testcase, Whiteboard: [fix])

Attachments

(3 files, 2 obsolete files)

User-Agent: Opera/6.0 (Macintosh; U) [en] Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en-US; rv:1.3a) Gecko/20021212 In page http://vargenau.free.fr or in attached exemple there is a white zone around the green <hr> Reproducible: Always Steps to Reproduce: 1. load page http://vargenau.free.fr or attached exemple 2. 3. Actual Results: There is a white zone around the green <hr>. Expected Results: I would expect the backgr.jpg be displayed on the whole page.
Attached file test case (obsolete) —
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.3a) Gecko/20021212 If you change the width of "div.banniere hr" to 99% the white space disappears but as soon as you change it back to 100% the white space appears again. This also works for equivalent px numbers and I assume for other measurements as well.
Attached file Reduced testcase (obsolete) —
Attachment #110253 - Attachment is obsolete: true
Attachment #114916 - Attachment is obsolete: true
Attachment 114917 [details] has interesting background problems when switching between tabs.
Assignee: other → position
Severity: normal → trivial
Component: Layout → Layout: R & A Pos
Summary: Extra white zone around hr → Extra white zone around HR
i see this on MacOS X trunk build 2003-02-19-03 and winXP trunk build 2003-02-17-04. confirming bug IE renders it correctly.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: testcase
Priority: -- → P3
I'm actually seeing garbage, not white. I expect the problem is a frame incorrectly reporting whether it's fully opaque.
Oh, this is an easy one.
Assignee: position → roc+moz
Whiteboard: [fix]
Attached patch fixSplinter Review
HR frames don't really paint their backgrounds; they just use the background color to paint the rule-part.
Attachment #114981 - Flags: superreview?(dbaron)
Attachment #114981 - Flags: review?(dbaron)
Attachment #114981 - Flags: superreview?(dbaron)
Attachment #114981 - Flags: superreview+
Attachment #114981 - Flags: review?(dbaron)
Attachment #114981 - Flags: review+
Fix checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Hello, I still see the problem with Mozilla 1.3 final. Was the correction integrated in Mozilla 1.3 final? Thank you.
No, I think the fix was too late for 1.3beta and it wasn't important enough to push into 1.3final.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: