Bug 186957. HR frames don't really paint their backgrounds. r+sr=dbaron