layout/html/base/src/nsHRFrame.cpp
@@ -72,6 +72,8 @@ public:
 
   virtual PRBool CanPaintBackground() { return PR_FALSE; }
 
+  virtual PRBool CanPaintBackground() { return PR_FALSE; }
+
 protected:
   PRBool GetNoShade();
 
